# Implementation-of-Parallelized-Neural-Networks

./: README
CNN/: CMakeLists.txt
MLP/: CMakeLists.txt
src/: convolutional_neural_network.cpp  convolutional_neural_network.h  mnist_helper.cpp  mnist_helper.h  neural_network.cpp  neural_network.h  test.cpp  test_cnn.cpp
